--- a/static/style.css
+++ b/static/style.css
@@ -95,7 +95,7 @@ section .title::after{
     align-items: center;
     justify-content: space-between;
 }
-.navbar .logo a{
+.navbar .logo a, .services a{
     color: #fff;
     font-size: 35px;
     font-weight: 600;
@@ -409,10 +409,10 @@ section .title::after{
     margin: 10px 0 7px 0;
 }
 .teams .carousel .card img{
-    height: 150px;
-    width: 150px;
+    height: 300px;
+    width: 350px;
     object-fit: cover;
-    border-radius: 50%;
+    
     border: 5px solid crimson;
     transition: all 0.3s ease;
 }
@@ -678,3 +678,4 @@ footer span a:hover{
         line-height: 38px;
     }
 }
+
