--- a/front/index.ejs
+++ b/front/index.ejs
@@ -1,40 +1,5 @@
-<!DOCTYPE html>
-<!-- Created By CodingNepal -->
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marwan Ahmed</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 
-</head>
-<body>
-    <div class="scroll-up-btn">
-        <i class="fas fa-angle-up"></i>
-    </div>
-    <nav class="navbar">
-        <div class="max-width">
-            <div class="logo"><a href="#">MARW<span>AN</span></a></div>
-            <ul class="menu">
-                <li><a href="#home" class="menu-btn">Home</a></li>
-                <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#services" class="menu-btn">Experiences</a></li>
-                <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#teams" class="menu-btn">Projects</a></li>
-                <li><a href="#contact" class="menu-btn">Contact</a></li>
-            </ul>
-            <div class="menu-btn">
-                <i class="fas fa-bars"></i>
-            </div>
-        </div>
-    </nav>
-
+    <%- include('header'); %>
     <!-- home section start -->
     <section class="home" id="home">
         <div class="max-width">
@@ -43,7 +8,10 @@
                 <div class="text-2">Marwan Ahmed</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="#contact">Hire me</a>
+
             </div>
+            <i class="fa-solid fa-github"></i>
+
         </div>
     </section>
 
@@ -57,7 +25,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Marwan and I'm a <span class="typing-2"></span></div>
-                    <p>I’m a Back-end Software Engineer who loves building web applications, I recently developed web applications using NodeJs. I'm excited to develop my skills and combine my passion for learning and building Web applications. I worked on many projects during my training in Udacity, in the Nano-degree scholarship, and four years in the Faculty of Computers and Information, Department of Computer Science and Software Development.</p>
+                    <p>I'm a Back-end Software Engineer who loves building web applications, I recently developed web applications using NodeJs. I'm excited to develop my skills and combine my passion for learning and building Web applications. I worked on many projects during my training in Udacity, in the Nano-degree scholarship, and four years in the Faculty of Computers and Information, Department of Computer Science and Software Development.</p>
                     <a href="./cv/CV.pdf" download>Download CV</a>               
                 </div>
             </div>
@@ -68,16 +36,20 @@
     <section class="services" id="services">
         <div class="max-width">
             <h2 class="title">My experiences</h2>
-            <div class="serv-content">
+            <div class="serv-content" >
 
                 <% for(let i = 0; i< works.length; i++) {%>
-                         <div class="card" style="margin-top: 10px; padding-top: 10px;">
-                            <div class="box">
+                        <div class="card" style="margin-top: 10px; padding-top: 5px;">
+                            <a href="works/<%= works[i].slug %>" >
+                            <div class="box" >
                                 <i class="fa-solid fa-laptop-code" style="color: brown;font-size: 25px;"><%= works[i].company %></i>
                                 <div class="text" style="font-size: 20px;"><%= works[i].title %></div>
                                 <p style="font-size: 18px;"><%= works[i].description.slice(0,200) %>...</p>
                             </div>
+                        </a>
                         </div> 
+                    
+
 
                     <% } %>
             </div>
@@ -93,15 +65,16 @@
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
                     <p>I'm doing many projects using all of my skills. My learning is project-based. I'm using all of my skills in building or designing projects and pages.</p>
-                    <a href="#">Read more</a>
+                    <a href="/projects">Read more</a>
                 </div>
                 <div class="column right">
 
                     <% for(let i = 0; i< skills.length; i++) {%>
+                        
                     <div class="bars">
                         <div class="info">
-                            <span><a href="#"><%= skills[i].name %></a></span>
-                            <span><%= skills[i].parsange %> %</span>
+                            <span><a href="skills/<%= skills[i].slug %>"><%= skills[i].name %></a></span>
+                            <span><%= skills[i].persantge %> %</span>
                         </div>
                         <div class="line html"></div>
                     </div>
@@ -119,7 +92,7 @@
             <div class="carousel owl-carousel">
                 
                 <% for(let i = 0; i< projects.length; i++) {%>
-                    <a href="#" style="margin-top: 10px;">
+                    <a href="projects/<%= projects[i].slug %>" style="margin-top: 10px;">
                         <div class="card" style="color: white;">
                             <div class="box">
                                 <img src="<%= projects[i].images[0] %>" alt="">
@@ -136,71 +109,4 @@
 
     </section>
 
-    <!-- contact section start -->
-    <section class="contact" id="contact">
-        <div class="max-width">
-            <h2 class="title">Contact me</h2>
-            <div class="contact-content">
-                <div class="column left">
-                    <div class="text">Get in Touch</div>
-                    <p>I'm available for work now as a Full-stack engineer or especially as a Back-end engineer.</p>
-                    <div class="icons">
-                        <div class="row">
-                            <i class="fas fa-user"></i>
-                            <div class="info">
-                                <div class="head">Name</div>
-                                <div class="sub-title">Marwan Ahmed</div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <div class="info">
-                                <div class="head">Address</div>
-                                <div class="sub-title">cairo, Egypt</div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <i class="fas fa-envelope"></i>
-                            <div class="info">
-                                <div class="head">Email</div>
-                                <div class="sub-title">marwan4125881@gmail.com</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="column right">
-                    <div class="text">Message me</div>
-                    <form action="/send_mail" method="post">
-                        <div class="fields">
-                            <div class="field name">
-                                <input type="text" name="name" placeholder="Name" required>
-                            </div>
-                            <div class="field email">
-                                <input type="email" name="email" placeholder="Email" required>
-                            </div>
-                        </div>
-                        <div class="field">
-                            <input type="text" name="subject" placeholder="Subject" required>
-                        </div>
-                        <div class="field textarea">
-                            <textarea cols="30" rows="10" name="message" placeholder="Message.." required></textarea>
-                        </div>
-                        <div class="button-area">
-                            <button type="submit">Hire me</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- footer section start -->
-    <footer>
-        <span>Created By <a href="#"></a> | <span class="far fa-copyright"></span></span>
-    </footer>
-
-    <script src="script.js">
-        
-    </script>
-</body>
-</html>
+    <%- include('contact'); %>
