--- a/front/index.ejs
+++ b/front/index.ejs
@@ -12,9 +12,9 @@
       <ul class="menu">
         <li><a href="/" class="menu-btn">Home</a></li>
         <li><a href="/#about" class="menu-btn">About</a></li>
-        <li><a href="/#services" class="menu-btn">Works</a></li>
+        <li><a href="/#works" class="menu-btn">Works</a></li>
         <li><a href="/#skills" class="menu-btn">Skills</a></li>
-        <li><a href="/#teams" class="menu-btn">Projects</a></li>
+        <li><a href="/#projects" class="menu-btn">Projects</a></li>
         <li><a href="/#contact" class="menu-btn">Contact</a></li>
         <% if(!user) {%>
         <li><a href="/works/create" class="menu-btn">create work</a></li>
@@ -66,8 +66,8 @@
     </div>
   </section>
 
-  <!-- services section start -->
-  <section class="services" id="services">
+  <!-- works section start -->
+  <section class="works" id="works">
     <div class="max-width">
       <h2 class="title">My experiences</h2>
       <div class="serv-content">
@@ -108,7 +108,7 @@
             project-based. I'm using all of my skills in building or designing
             projects and pages.
           </p>
-          <a href="/#teams">Read more</a>
+          <a href="/#projects">Read more</a>
         </div>
         <div class="column right">
           <% for(let i = 0; i< skills.length; i++) {%>
@@ -126,8 +126,8 @@
     </div>
   </section>
 
-  <!-- teams section start -->
-  <section class="teams" id="teams">
+  <!-- projects section start -->
+  <section class="projects" id="projects">
     <div class="max-width">
       <h2 class="title">My Projects</h2>
       <div class="carousel owl-carousel">
