--- a/static/style.css
+++ b/static/style.css
@@ -37,11 +37,11 @@ section{
     padding: 0 80px;
     margin: auto;
 }
-.about, .services, .skills, .teams, .contact, footer{
+.about, .works, .skills, .projects, .contact, footer{
     font-family: 'Poppins', sans-serif;
 }
 .about .about-content,
-.services .serv-content,
+.works .serv-content,
 .skills .skills-content,
 .contact .contact-content{
     display: flex;
@@ -97,7 +97,7 @@ section .title::after{
     align-items: center;
     justify-content: space-between;
 }
-.navbar .logo a, .services a{
+.navbar .logo a, .works a{
     color: #fff;
     font-size: 35px;
     font-weight: 600;
@@ -259,21 +259,21 @@ section .title::after{
     background: none;
 }
 
-/* services section styling */
-.services, .teams{
+/* works section styling */
+.works, .projects{
     color:#fff;
     background: #111;
 }
-.services .title::before,
-.teams .title::before{
+.works .title::before,
+.projects .title::before{
     background: #fff;
 }
-.services .title::after,
-.teams .title::after{
+.works .title::after,
+.projects .title::after{
     background: #111;
     content: "what i provide";
 }
-.services .serv-content .card{
+.works .serv-content .card{
     width: calc(33% - 20px);
     background: #222;
     text-align: center;
@@ -282,24 +282,24 @@ section .title::after{
     cursor: pointer;
     transition: all 0.3s ease;
 }
-.services .serv-content .card:hover{
+.works .serv-content .card:hover{
     background: crimson;
 }
-.services .serv-content .card .box{
+.works .serv-content .card .box{
     transition: all 0.3s ease;
 }
-.services .serv-content .card:hover .box{
+.works .serv-content .card:hover .box{
     transform: scale(1.05);
 }
-.services .serv-content .card i{
+.works .serv-content .card i{
     font-size: 50px;
     color: crimson;
     transition: color 0.3s ease;
 }
-.services .serv-content .card:hover i{
+.works .serv-content .card:hover i{
     color: #fff;
 }
-.services .serv-content .card .text{
+.works .serv-content .card .text{
     font-size: 25px;
     font-weight: 500;
     margin: 10px 0 7px 0;
@@ -380,11 +380,11 @@ section .title::after{
     width: 70%;
 }
 
-/* teams section styling */
-.teams .title::after{
+/* projects section styling */
+.projects .title::after{
     content: "who with me";
 }
-.teams .carousel .card{
+.projects .carousel .card{
     background: #222;
     border-radius: 6px;
     padding: 25px 35px;
@@ -392,25 +392,25 @@ section .title::after{
     overflow: hidden;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover{
+.projects .carousel .card:hover{
     background: crimson;
 }
-.teams .carousel .card .box{
+.projects .carousel .card .box{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover .box{
+.projects .carousel .card:hover .box{
     transform: scale(1.05);
 }
-.teams .carousel .card .text{
+.projects .carousel .card .text{
     font-size: 25px;
     font-weight: 500;
     margin: 10px 0 7px 0;
 }
-.teams .carousel .card img{
+.projects .carousel .card img{
     height: 300px;
     width: 350px;
     object-fit: cover;
@@ -418,7 +418,7 @@ section .title::after{
     border: 5px solid crimson;
     transition: all 0.3s ease;
 }
-.teams .carousel .card:hover img{
+.projects .carousel .card:hover img{
     border-color: #fff;
 }
 .owl-dots{
@@ -621,7 +621,7 @@ footer span a:hover{
     .about .about-content .right{
         flex: 100%;
     }
-    .services .serv-content .card{
+    .works .serv-content .card{
         width: calc(50% - 10px);
         margin-bottom: 20px;
     }
@@ -645,7 +645,7 @@ footer span a:hover{
     .home .home-content a{
         font-size: 20px;
     }
-    .services .serv-content .card{
+    .works .serv-content .card{
         width: 100%;
     }
 }
